--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
+    "next": "14.1.0",
     "react": "^18",
+    "react-countup": "^6.5.0",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.0",
+    "react-responsive": "^9.0.2",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
