--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-scroll": "^1.8.10",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
