--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@types/react-date-range": "^1.4.9",
     "@types/react-scroll": "^1.8.10",
+    "@types/swiper": "^6.0.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
@@ -23,7 +24,7 @@
     "react-intersection-observer": "^9.8.0",
     "react-responsive": "^9.0.2",
     "react-scroll": "^1.9.0",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
